@@ -63,36 +63,36 @@
 #  endif
 __BEGIN_DECLS
 
-#ifndef cmplx
+#ifndef _cerf_cmplx
 #  ifdef CERF_AS_CPP
-#    define cmplx std::complex<double>
+#    define _cerf_cmplx std::complex<double>
 #  else
-#    define cmplx double _Complex
+#    define _cerf_cmplx double _Complex
 #  endif
 #endif
 
 // compute w(z) = exp(-z^2) erfc(-iz), Faddeeva's scaled complex error function
-cmplx  w_of_z   (cmplx z);
+_cerf_cmplx  w_of_z   (_cerf_cmplx z);
 double im_w_of_x(double x); // special case Im[w(x)] of real x
 double re_w_of_z(double x, double y);
 double im_w_of_z(double x, double y);
 
 // compute erf(z), the error function of complex arguments
-cmplx cerf(cmplx z);
+_cerf_cmplx cerf(_cerf_cmplx z);
 
 // compute erfc(z) = 1 - erf(z), the complementary error function
-cmplx cerfc(cmplx z);
+_cerf_cmplx cerfc(_cerf_cmplx z);
 
 // compute erfcx(z) = exp(z^2) erfc(z), an underflow-compensated version of erfc
-cmplx cerfcx(cmplx z);
+_cerf_cmplx cerfcx(_cerf_cmplx z);
 double erfcx(double x); // special case for real x
 
 // compute erfi(z) = -i erf(iz), the imaginary error function
-cmplx cerfi(cmplx z);
+_cerf_cmplx cerfi(_cerf_cmplx z);
 double erfi (double x); // special case for real x
 
 // compute dawson(z) = sqrt(pi)/2 * exp(-z^2) * erfi(z), Dawson's integral
-cmplx cdawson(cmplx z);
+_cerf_cmplx cdawson(_cerf_cmplx z);
 double dawson(double x); // special case for real x
 
 // compute voigt(x,...), the convolution of a Gaussian and a Lorentzian
