@@ -46,7 +46,7 @@
 
 #include "cerf.h"
 #include <math.h>
-#include "defs.h" // defines cmplx, NaN, C, cexp, ...
+#include "defs.h" // defines _cerf_cmplx, NaN, C, cexp, ...
 
 /******************************************************************************/
 /* Lookup-table for Chebyshev polynomials for smaller |x|                     */
